<resources>
    <string name="app_name">Mr.MR</string>
    <string name="action_settings">Settings</string>


    <string name="GMKEY">AIzaSyAzI6DaPqbJloRgGq1s1ITtKnhBk09P_Gk</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--
   Drawer
-->
    <string name="home">Home</string>
    <string name="addparty">Add Customer</string>
    <string name="addorder">Add Order</string>
    <string name="cart">Cart</string>
    <string name="map">Place</string>
    <string name="placeorder">Place Order</string>
    <string name="group_orders">Orders</string>
    <string name="group_plan">Plan</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>

    <!---->
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_name">Full Name</string>
    <string name="hint_contact">Contact</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="hint_address">Address</string>
    <string name="label_btn_find">Find</string>


    <string name="str_btn_find">Find</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_branch">Branch</string>
    <string name="hint_license">License</string>
    <string name="hint_search_user_name">Search Customer</string>
    <string name="hint_search_product_name">Search Product By Name</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="settings">Settings</string>
    <string name="title_activity_product_search">ProductSearchActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="forget_pass">Forget Password</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
